View Name, Mini-Axis, and Object Info Overlapped when Properties (N) Panel is moved to left side of screen (F5) #34347

Closed
opened 2013-02-21 17:10:33 +01:00 by Darren Waschow · 4 comments

%%%--- Operating System, Graphics card ---
Win7-64, nVidia GTX 580 + GTX 460

- Blender version with error ---

2.66.0 r54697

- Short description of error ---

When the Properties (N) Panel is moved to the left side of the screen (using F5) the View Name, Object Info text, and Mini-Axis are not moved over as they are when the Tools (T) Panel is opened. Remaining where they are, they are overlapped by the Properties Panel.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Hover mouse over Properties Panel when it's located on the right side of the screen (default location).
Hit F5 to move it to the Left side of the screen
Open and close it using N-Key. Notice the overlap on top of view name, etc.
Close Properties Panel and show Tools Panel (T)
Notice the view name, etc. items are shifted over to avoid overlapping by Tools Panel.
%%%

%%%--- Operating System, Graphics card --- Win7-64, nVidia GTX 580 + GTX 460 - Blender version with error --- 2.66.0 r54697 - Short description of error --- When the Properties (N) Panel is moved to the left side of the screen (using F5) the View Name, Object Info text, and Mini-Axis are not moved over as they are when the Tools (T) Panel is opened. Remaining where they are, they are overlapped by the Properties Panel. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Hover mouse over Properties Panel when it's located on the right side of the screen (default location). Hit F5 to move it to the Left side of the screen Open and close it using N-Key. Notice the overlap on top of view name, etc. Close Properties Panel and show Tools Panel (T) Notice the view name, etc. items are shifted over to avoid overlapping by Tools Panel. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed, only happens with Region Overlap enabled, assigning to Ton. %%%

%%%Confirmed, only happens with Region Overlap enabled, assigning to Ton. %%%
Member

%%%Fix in svn, thanks for report.%%%

%%%Fix in svn, thanks for report.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34347
No description provided.