source/blender/editors/screen/area.c
@@ -1965,11 +1965,13 @@ void ED_region_visible_rect(ARegion *ar, rcti *rect)
 	for (; arn; arn = arn->next) {
 		if (ar != arn && arn->overlap) {
 			if (BLI_rcti_isect(rect, &arn->winrct, NULL)) {
-				/* overlap left */
-				if (rect->xmin == arn->winrct.xmin)
+				
+				/* overlap left, also check 1 pixel offset (2 regions on one side) */
+				if ( ABS(rect->xmin - arn->winrct.xmin) < 2)
 					rect->xmin = arn->winrct.xmax;
+
 				/* overlap right */
-				if (rect->xmax == arn->winrct.xmax)
+				if ( ABS(rect->xmax - arn->winrct.xmax) < 2)
 					rect->xmax = arn->winrct.xmin;
 			}
 		}
